Fix spacing in UI.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -48,6 +48,6 @@ body {
   color: $red;
 }
 
-#winners {
-  margin-bottom: 80px;
+.section {
+  margin-bottom: 40px;
 }
